[gd_scene load_steps=6 format=2]

[ext_resource path="res://read.gd" type="Script" id=1]
[ext_resource path="res://sprites/ui/green button/green button 2.png" type="Texture" id=2]
[ext_resource path="res://sprites/ui/redbutton/red.png" type="Texture" id=3]
[ext_resource path="res://sound/ui/click1.ogg" type="AudioStream" id=4]
[ext_resource path="res://font/new_dynamicfont.tres" type="DynamicFont" id=5]

[node name="read" type="Node2D"]
position = Vector2( 438, 128 )
script = ExtResource( 1 )

[node name="Node2D" type="Node2D" parent="."]
z_index = 3

[node name="Sprite" type="Sprite" parent="Node2D"]
position = Vector2( 5.95081, 442.274 )
scale = Vector2( 3.68207, 1.85791 )
texture = ExtResource( 3 )

[node name="Button" type="Button" parent="."]
visible = false
margin_left = 377.273
margin_top = 404.23
margin_right = 578.273
margin_bottom = 457.23
icon = ExtResource( 2 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Button"]
margin_left = 56.0
margin_top = -2.0
margin_right = 152.0
margin_bottom = 46.0
custom_fonts/font = ExtResource( 5 )
text = "PASS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="Node2D2" type="Node2D" parent="."]
z_index = 4

[node name="Label" type="Label" parent="Node2D2"]
visible = false
margin_left = -313.0
margin_top = 26.0
margin_right = 318.0
margin_bottom = 453.0
custom_fonts/font = ExtResource( 5 )
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="mouse_entered" from="Button" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_Button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
